--- a/lr_dt_rf.ipynb
+++ b/lr_dt_rf.ipynb
@@ -12,7 +12,6 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "from scipy.sparse import hstack\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -196,7 +195,7 @@
     }
    ],
    "source": [
-    "def lr_process(self):\n",
+    "def lr_process1(self):\n",
     "    predictList = []\n",
     "    for col in range(6):\n",
     "        train_target = model.train_class[:,col]\n",
@@ -223,7 +222,7 @@
     "#             eq += 1\n",
     "#     return eq/predictList.shape[0]\n",
     "\n",
-    "lr_process(model)"
+    "lr_process1(model)"
    ]
   },
   {
@@ -243,7 +242,7 @@
     }
    ],
    "source": [
-    "def lr_process(self):\n",
+    "def lr_process2(self):\n",
     "    predictList = []\n",
     "    Clist = [.5,.3,.3,.1,.5,.8]\n",
     "    for col in range(6):\n",
@@ -260,7 +259,7 @@
     "            eq += 1\n",
     "    return eq/predictList.shape[0]\n",
     "\n",
-    "lr_process(model)"
+    "lr_process2(model)"
    ]
   },
   {
